<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_one"
    tools:context=".ui.fragment.AddCustomerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/card_view_background"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cus_full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:hintEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cus_full_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cus_father_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/input_cus_full_name"
        app:hintEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cus_father_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/father_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cus_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/input_cus_father_name"
        app:hintEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cus_mobile"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cus_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/input_cus_mobile"
        app:hintEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cus_address"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cus_adhar_card_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/input_cus_address"
        app:hintEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cus_adhar_card_number"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/adhar_card_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="16"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cus_pan_card_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        app:layout_constraintTop_toBottomOf="@+id/input_cus_adhar_card_number"
        app:hintEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cus_pan_card_number"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/pancard_number"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="12"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimary"
                        android:text="submit"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/input_cus_pan_card_number" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>